--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
+    "antd": "^5.17.3",
+    "emailjs-com": "^3.2.0",
+    "next": "14.2.3",
     "react": "^18",
+    "react-awesome-slider": "^4.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-responsive": "^10.0.0",
+    "react-scroll": "^1.9.0",
+    "sass": "^1.77.2"
   },
   "devDependencies": {
     "eslint": "^8",
